objects/Words__c.object
<CustomObject>
    <description>Words Database</description>
    <fields>
        <fullName>English__c</fullName>
        <description>Word or expression on English</description>
        <inlineHelpText>Enter English word(expression) here plz.</inlineHelpText>
        <label>English</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Russian__c</fullName>
        <description>Words on Russian</description>
        <inlineHelpText>Enter all words on Russian here.</inlineHelpText>
        <label>Russian</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>From what subject is the word?</description>
        <inlineHelpText>Enter short subject.</inlineHelpText>
        <label>Subject</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcription__c</fullName>
        <label>Transcription</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Words</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>English__c</columns>
        <columns>Transcription__c</columns>
        <columns>Russian__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WN-{0000}</displayFormat>
        <label>Word Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>